02/18/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.8 'Marshal West':
	- Issue 102: SO_BSDCOMPAT socket option removed;
	- Issue 104: check for the REALM attribute value;
	- Issue 105: no-cli segfault fixed;
	- Issue 106: MESSAGE-INTEGRITY removed from DATA indication.

02/12/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.7 'Marshal West':
	- Possible indefinite cycle fixed in TCP/TCP routing (Issue 99);
	- Address 0.0.0.0 can be used as a listener address (Issue 100);
	- DHCP-configured servers supported (Issue 101);

02/04/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.6 'Marshal West':
	- Channel traffic memory copy elimination.
	- Send indication memory copy elimination.
	- DTLS traffic processing memory copy eliminated.
	- Mobility forbidden error code number fixed - according to the new draft document.
	- getsockname() usage minimized.
	- port allocation improved.
	- default relay behavior fixed (when no relay addresses defined).
	- atomic create permission request handling (Issue 97).

01/25/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.5 'Marshal West':
- code optimization.

01/24/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.4 'Marshal West':
- HMAC key handling fixed (Issue 96).

01/23/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.3 'Marshal West':
	- Security fix (issue 95).
	- Default "implicit" relay IP allocation policy is more usable
		(issue 94 fixed).
	- SSLv2 fixed (for those who are still using it)
		(issue 93 fixed).
	- Cosmetic changes.

01/19/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.1 'Marshal West':
	- CPU/memory cache optimization (memory locality).
	- torture tests enhanced.
	- stability fixes.
	- minor possible memory leak fix.
	- new TLS options: --no-sslv2, --no-sslv3, --no-tlsv1,
		--no-tlsv1_1, --no-tlsv1_2

01/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.1.4 'Marshal West':
	- Linux epoll performance improvements.
	- DTLS minor fix.
